--- a/app/src/main/res/layout/fragment_videos.xml
+++ b/app/src/main/res/layout/fragment_videos.xml
@@ -7,10 +7,19 @@
     tools:context=".Fragment.VideosFragment">
 
     <TextView
+        android:id="@+id/total_videos_tv_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/total_videos"
         android:layout_margin="18dp"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/video_rv_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/video_view_child"
+        app:layout_constraintTop_toBottomOf="@id/total_videos_tv_id"
+        app:layout_constraintStart_toStartOf="@id/total_videos_tv_id"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
