--- a/app/src/main/res/layout/video_view_child.xml
+++ b/app/src/main/res/layout/video_view_child.xml
@@ -2,13 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/icon_id"
         android:layout_width="70dp"
         android:layout_height="58dp"
-        android:src="@mipmap/ic_vedio_player_icon"
+        android:layout_marginBottom="5dp"
+        android:src="@mipmap/ic_video_player_icon"
         app:layout_constraintBottom_toBottomOf="@id/folder_name_id"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/video_name_id" />
@@ -17,36 +21,38 @@
         android:id="@+id/video_name_id"
         android:layout_width="0dp"
         android:layout_height="38dp"
-        android:text="@string/video_name"
-        android:textStyle="bold"
         android:gravity="center_vertical"
-        android:textColor="@color/black"
+        android:maxLines="1"
         android:padding="2dp"
+        android:text="@string/video_name"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@id/duration_id"
         app:layout_constraintStart_toEndOf="@id/icon_id"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/folder_name_id"
         android:layout_width="0dp"
         android:layout_height="28dp"
-        android:text="Folder Name"
-        android:padding="2dp"
         android:gravity="center_vertical"
+        android:maxLines="1"
+        android:padding="2dp"
+        android:text="Folder Name"
         app:layout_constraintEnd_toStartOf="@id/duration_id"
-        app:layout_constraintTop_toBottomOf="@id/video_name_id"
-        app:layout_constraintStart_toStartOf="@id/video_name_id"/>
+        app:layout_constraintStart_toStartOf="@id/video_name_id"
+        app:layout_constraintTop_toBottomOf="@id/video_name_id" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/duration_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00:00"
         android:padding="2dp"
+        android:text="00:00"
         android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
