--- a/app/src/main/res/layout/folder_view_child.xml
+++ b/app/src/main/res/layout/folder_view_child.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
@@ -13,10 +14,11 @@
         android:layout_height="58dp"
         android:layout_marginBottom="5dp"
         android:src="@drawable/ic_baseline_folder_24"
+        android:tint="@color/cool_pink"
         app:layout_constraintBottom_toBottomOf="@id/folder_name_id_fv"
         app:layout_constraintStart_toStartOf="parent"
-        android:tint="@color/cool_pink"
-        app:layout_constraintTop_toTopOf="@id/folder_name_id_fv" />
+        app:layout_constraintTop_toTopOf="@id/folder_name_id_fv"
+        tools:ignore="ImageContrastCheck" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -26,7 +28,7 @@
         android:gravity="center_vertical"
         android:maxLines="1"
         android:padding="2dp"
-        android:text="Folder Name"
+        android:text="@string/folder_name"
         app:layout_constraintStart_toEndOf="@id/icon_id_fv"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
