--- a/app/src/main/res/layout/fragment_folders.xml
+++ b/app/src/main/res/layout/fragment_folders.xml
@@ -4,13 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragment.FoldersFragment">
+    tools:context=".View.Fragment.FoldersFragment">
 
     <TextView
+        android:id="@+id/total_folders_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/total_folders"
         android:layout_margin="18dp"
         app:layout_constraintTop_toTopOf="parent"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/folder_rv_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:scrollbarThumbVertical="@drawable/ic_scroll_bar"
+        tools:listitem="@layout/folder_view_child"
+        app:layout_constraintTop_toBottomOf="@id/total_folders_id"
+        app:layout_constraintStart_toStartOf="@id/total_folders_id"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
