--- a/app/src/main/res/layout/fragment_videos.xml
+++ b/app/src/main/res/layout/fragment_videos.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragment.VideosFragment">
+    tools:context=".View.Fragment.VideosFragment">
 
     <TextView
         android:id="@+id/total_videos_tv_id"
@@ -18,6 +18,7 @@
         android:id="@+id/video_rv_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scrollbars="vertical"
         tools:listitem="@layout/video_view_child"
         app:layout_constraintTop_toBottomOf="@id/total_videos_tv_id"
         app:layout_constraintStart_toStartOf="@id/total_videos_tv_id"/>
