--- a/app/src/main/res/layout/activity_folder.xml
+++ b/app/src/main/res/layout/activity_folder.xml
@@ -6,4 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".View.Activity.FoldersActivity">
 
+    <TextView
+        android:id="@+id/total_videos_tv_id_fa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/total_videos"
+        android:layout_margin="18dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/video_rv_id_fa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        tools:listitem="@layout/video_view_child"
+        app:layout_constraintTop_toBottomOf="@id/total_videos_tv_id_fa"
+        app:layout_constraintStart_toStartOf="@id/total_videos_tv_id_fa"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
