--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".View.Activity.PlayerActivity">
 
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/playerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:keepScreenOn="true"
+        app:use_controller="true"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
