--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -11,5 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:keepScreenOn="true"
-        app:use_controller="true"/>
+        app:use_controller="true"
+        app:controller_layout_id="@layout/custom_control_view"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
